# aoc2021

./: .gitignore  CHANGELOG.md  COPYING.md  README.md  aoc2021.cabal
app/: Main.hs
lib/: AOC2021.hs
lib/AOC2021/: Day1.hs
