cabal-version:      2.4
name:               aoc2021
version:            0.1.0.0


license:      GPL-3.0-only
license-file: COPYING.md
copyright:    (c) 2021 Angus Houston
author:       Angus Houston <aoc2021@guhou.dev>
maintainer:   Angus Houston <aoc2021@guhou.dev>

synopsis: Advent of Code 2021

extra-source-files: CHANGELOG.md

common deps
    default-language: Haskell2010
    default-extensions:
        PatternGuards
        OverloadedStrings
        RecordWildCards
        ScopedTypeVariables
    build-depends:
        base,
        bytestring           ^>= 0.10,
        conduit              ^>= 1.3,
        optparse-applicative ^>= 0.16,
        vector               ^>= 0.12,
        text                 ^>= 1.2,
        text-show            ^>= 3.9,

library
    import: deps
    hs-source-dirs: lib
    exposed-modules:
        AOC2021
        AOC2021.Day1

executable aoc2021
    import: deps
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        aoc2021
